Add exports for running tests on > java 8, update readme